config/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sofia-dental
  labels:
    name: sofia-dental
    app: dental-practice
